--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "framer-motion": "^12.26.2",
     "lucide-react": "^0.562.0",
     "next": "16.1.3",
+    "next-auth": "^4.24.13",
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "styled-components": "^6.3.8",
